--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,17 @@ thirdparty/**
 !thirdparty/create_venv.sh
 *.pyc
 
+*.pcd
+*.ply
+
+# but do track lib.a, even though you're ignoring .a files above
+!lib.a
+
+# only ignore the TODO file in the current directory, not subdir/TODO
+/TODO
+
+# ignore all files in the build/ directory
+build/
+
+# ignore all data files
+data/
